--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
     <section id="download" class="p-10">
       <h2 class="text-3xl font-bold mb-6">Download Mewo Taggers</h2>
       <div class="space-y-4">
-        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="block bg-gray-700 p-4 rounded hover:bg-gray-600">Download for PC VR (Google Drive)</a>
+        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="block bg-gray-700 p-4 rounded hover:bg-gray-600">Download for PC VR (Google Drive) COMING SOON</a>
         <a href="https://salmonvr.itch.io/meow-taggers" class="block bg-gray-700 p-4 rounded hover:bg-gray-600">Download for Quest (itch.io)</a>
         <p class="text-sm text-gray-400">Follow the instructions in the README.txt for installation help.</p>
+      </div>
+      <div class="mt-6">
+        <h3 class="text-2xl font-semibold mb-2">How to Install</h3>
+        <p class="mb-2">Watch this video to learn how to install Meow Taggers on your device:</p>
+        <div class="aspect-w-16 aspect-h-9">
+          <iframe class="w-full h-64 rounded" src="https://youtu.be/JNJZlv58q7g?si=As0ryvT5IpX54xPI" title="How to Install Meow Taggers" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </section>
 
@@ -47,12 +54,12 @@
     <section id="community" class="p-10">
       <h2 class="text-3xl font-bold mb-4">Join the Community</h2>
       <p class="mb-4">Get involved, share feedback, or hang out with other players!</p>
-      <a href="https://discord.gg/uskKCmbDa8" class="bg-purple-600 px-4 py-2 rounded hover:bg-purple-500">Join our Discord</a>
+      <a href="https://discord.gg/qEGDcFHMbC" class="bg-purple-600 px-4 py-2 rounded hover:bg-purple-500">Join our Discord</a>
     </section>
 
     <!-- Footer -->
     <footer class="p-4 bg-gray-800 text-center text-sm text-gray-400">
-      &copy; 2025 Meow Taggers. All rights reserved.
+      &copy; 2025 Mewo Taggers. All rights reserved.
     </footer>
   </body>
 </html>
