--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3 class="text-2xl font-semibold mb-2">How to Install</h3>
         <p class="mb-2">Watch this video to learn how to install Meow Taggers on your device:</p>
         <div class="aspect-w-16 aspect-h-9">
-          <iframe class="w-full h-64 rounded" src="https://youtu.be/JNJZlv58q7g?si=As0ryvT5IpX54xPI" title="How to Install Meow Taggers" frameborder="0" allowfullscreen></iframe>
+          <iframe class="w-full h-64 rounded" src="https://www.youtube.com/embed/JNJZlv58q7g" title="How to Install Meow Taggers" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
