--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="bg-gray-900 text-white font-sans">
     <!-- Navbar -->
     <header class="bg-gray-800 p-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Mewo Taggers</h1>
+      <h1 class="text-2xl font-bold">Meow Taggers</h1>
       <nav class="space-x-4">
         <a href="#home" class="hover:text-purple-400">Home</a>
         <a href="#download" class="hover:text-purple-400">Download</a>
@@ -27,11 +27,11 @@
 
     <!-- Download Section -->
     <section id="download" class="p-10">
-      <h2 class="text-3xl font-bold mb-6">Download Mewo Taggers</h2>
+      <h2 class="text-3xl font-bold mb-6">Download Meow Taggers</h2>
       <div class="space-y-4">
         <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="block bg-gray-700 p-4 rounded hover:bg-gray-600">Download for PC VR (Google Drive) COMING SOON</a>
         <a href="https://salmonvr.itch.io/meow-taggers" class="block bg-gray-700 p-4 rounded hover:bg-gray-600">Download for Quest (itch.io)</a>
-        <p class="text-sm text-gray-400">Follow the instructions in the README.txt for installation help.</p>
+        <p class="text-sm text-gray-400">Follow the instructions bellow for installation help.</p>
       </div>
       <div class="mt-6">
         <h3 class="text-2xl font-semibold mb-2">How to Install</h3>
