--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Footer -->
     <footer class="p-4 bg-gray-800 text-center text-sm text-gray-400">
-      &copy; 2025 Mewo Taggers. All rights reserved.
+      &copy; 2025 Meow Taggers. All rights reserved.
     </footer>
   </body>
 </html>
