--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mewo Taggers</title>
+    <title>Meow Taggers</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-900 text-white font-sans">
@@ -20,7 +20,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="p-10 text-center bg-gradient-to-b from-purple-800 to-gray-900">
-      <h2 class="text-4xl font-extrabold mb-4">Welcome to Mewo Taggers</h2>
+      <h2 class="text-4xl font-extrabold mb-4">Welcome to Meow Taggers</h2>
       <p class="text-lg mb-6">A fast-paced VR tag game inspired by Gorilla Tag</p>
       <a href="#download" class="bg-purple-600 px-6 py-3 rounded-lg text-white font-bold hover:bg-purple-500 transition">Download Now</a>
     </section>
